[Gradle|Sync] cleanup: extracted logic for the fetching java source set compiler options
GitOrigin-RevId: e367b71faa847afd3f0f610895395ce046136811